// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/FormSection AvecDescription smoke-test 1`] = `
<div class="w-full max-w-lg p-8">
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <div class="font-bold text-primary-10">
          Titre de la section
        </div>
      </div>
      <div class="text-sm text-primary-10">
        Description de la section
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    </div>
  </div>
</div>
`;

exports[`design-system/FormSection AvecFields smoke-test 1`] = `
<div class="w-full max-w-lg p-8">
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <span class="ri-leaf-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary-7">
        </span>
        <div class="font-bold text-primary-10">
          Titre de la section
        </div>
      </div>
      <div class="text-sm text-primary-10">
        Description de la section
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
      <div class="flex-grow flex flex-col gap-3 md:col-span-2">
        <label>
          <div class="font-medium text-grey-8">
            Titre du plan
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
          >
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Statut
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="date"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
          >
          <button type="button"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Niveaude priorité
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="date"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
          >
          <button type="button"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/FormSection AvecIcone smoke-test 1`] = `
<div class="w-full max-w-lg p-8">
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <span class="ri-leaf-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary-7">
        </span>
        <div class="font-bold text-primary-10">
          Titre de la section
        </div>
      </div>
      <div class="text-sm text-primary-10">
        Description de la section
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    </div>
  </div>
</div>
`;

exports[`design-system/FormSection Default smoke-test 1`] = `
<div class="w-full max-w-lg p-8">
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <div class="font-bold text-primary-10">
          Titre de la section
        </div>
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    </div>
  </div>
</div>
`;

exports[`design-system/FormSection PlusieursSections smoke-test 1`] = `
<div class="w-full max-w-lg p-8 flex flex-col gap-10">
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <span class="ri-leaf-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary-7">
        </span>
        <div class="font-bold text-primary-10">
          Titre de la section
        </div>
      </div>
      <div class="text-sm text-primary-10">
        Description de la section
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
      <div class="flex-grow flex flex-col gap-3 md:col-span-2">
        <label>
          <div class="font-medium text-grey-8">
            Titre du plan
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
          >
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Statut
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="date"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
          >
          <button type="button"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Niveaude priorité
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="date"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
          >
          <button type="button"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-6">
    <div class="flex flex-col gap-4">
      <div class="flex items-center gap-2">
        <div class="font-bold text-primary-10">
          Le titre d'une autre section
        </div>
      </div>
      <div class="h-px bg-primary-3">
      </div>
    </div>
    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
      <div class="flex-grow flex flex-col gap-3 md:col-span-2">
        <label>
          <div class="font-medium text-grey-8">
            Titre du plan
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/FormSection SansHeader smoke-test 1`] = `
<div class="w-full max-w-lg p-8">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label>
        <div class="font-medium text-grey-8">
          Titre du plan
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label>
        <div class="font-medium text-grey-8">
          Statut
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="date"
               class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
        >
        <button type="button"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
        >
          <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
